# dj-migration-bug

./: README.md  pyproject.toml
website/: settings.py
