[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Eli Per <30153503+eliezerp3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.2"
dj-stripe = {git = "https://github.com/dj-stripe/dj-stripe.git", rev = "a332d77"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
